--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,6 +16,8 @@ install:
   - ps: |
       Install-PackageProvider -Name NuGet -Force | Out-Null
       Import-PackageProvider NuGet -Force | Out-Null
+      Install-Module -Name PowerShellGet -Force
+      Import-Module PowerShellGet -Force
       Set-PSRepository -Name PSGallery -InstallationPolicy Trusted | Out-Null
       Install-Module InvokeBuild -MaximumVersion 5.1.0 -Scope CurrentUser -Force | Out-Null
       Install-Module platyPS -RequiredVersion 0.9.0 -Scope CurrentUser -Force | Out-Null
