Try harder to get a better packageget version

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,10 +14,12 @@ environment:
 
 install:
   - ps: |
+      Install-Module -Name PowershellGet,PackageManagement -force -confirm:$false -verbose
+      Get-Module PowerShellGet,PackageManagement | Remove-Module -Force -Verbose
+      Install-Module -Name PowerShellGet -MinimumVersion 1.6 -PassThru -Force
+      Install-Module -Name PackageManagement -MinimumVersion 1.1.7.0 -PassThru -Force
       Install-PackageProvider -Name NuGet -Force | Out-Null
       Import-PackageProvider NuGet -Force | Out-Null
-      Install-Module -Name PowerShellGet -Force
-      Import-Module PowerShellGet -Force
       Set-PSRepository -Name PSGallery -InstallationPolicy Trusted | Out-Null
       Install-Module InvokeBuild -MaximumVersion 5.1.0 -Scope CurrentUser -Force | Out-Null
       Install-Module platyPS -RequiredVersion 0.9.0 -Scope CurrentUser -Force | Out-Null
