--- a/.travis.yml
+++ b/.travis.yml
@@ -26,5 +26,6 @@ install:
 
 script:
   - ulimit -n 4096
-  - powershell -File scripts/travisInstallPSGet.ps1
+  - powershell -Command { Install-Module -Name PowerShellGet -Force -Confirm:$false -Verbose -MinimumVersion 1.6 }
+  - powershell -Command { Install-Module -Name PackageManagement -Force -Confirm:$false -Verbose -MinimumVersion 1.1.7.0 }
   - powershell -File scripts/travis.ps1
