--- a/.travis.yml
+++ b/.travis.yml
@@ -26,4 +26,13 @@ install:
 
 script:
   - ulimit -n 4096
+  - powershell -Command {
+      Get-Module PowerShellGet,PackageManagement | Remove-Module -Force -Verbose
+      powershell -Command { Install-Module -Name PowershellGet -MinimumVersion 1.6 -force -confirm:$false -verbose }
+      powershell -Command { Install-Module -Name PackageManagement -MinimumVersion 1.1.7.0 -Force -Confirm:$false -Verbose }
+      Import-Module -Name PowerShellGet -MinimumVersion 1.6 -Force
+      Import-Module -Name PackageManagement -MinimumVersion 1.1.7.0 -Force
+      Install-PackageProvider -Name NuGet -Force | Out-Null
+      Import-PackageProvider NuGet -Force | Out-Null
+      Set-PSRepository -Name PSGallery -InstallationPolicy Trusted | Out-Null }
   - powershell -File scripts/travis.ps1
