--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,6 +14,14 @@ environment:
 
 install:
   - ps: |
+      Get-Module PowerShellGet,PackageManagement | Remove-Module -Force -Verbose
+      powershell -Command { Install-Module -Name PowershellGet -MinimumVersion 1.6 -force -confirm:$false -verbose }
+      powershell -Command { Install-Module -Name PackageManagement -MinimumVersion 1.1.7.0 -Force -Confirm:$false -Verbose }
+      Import-Module -Name PowerShellGet -MinimumVersion 1.6 -Force
+      Import-Module -Name PackageManagement -MinimumVersion 1.1.7.0 -Force
+      Install-PackageProvider -Name NuGet -Force | Out-Null
+      Import-PackageProvider NuGet -Force | Out-Null
+      Set-PSRepository -Name PSGallery -InstallationPolicy Trusted | Out-Null
       Install-Module InvokeBuild -MaximumVersion 5.1.0 -Scope CurrentUser -Force | Out-Null
       Install-Module platyPS -RequiredVersion 0.9.0 -Scope CurrentUser -Force | Out-Null
 
