--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ git:
 matrix:
   include:
     -os: linux
-     dist: xenial
+     dist: trusty
      sudo: required
     -os: osx
-     osx_image: xcode9.4.1
+     osx_image: xcode9.4
 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
