--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,7 @@ environment:
   DOTNET_CLI_TELEMETRY_OPTOUT: true        # Don't send telemetry
 
 install:
+  - pwsh: $PSHOME
   - ps: |
       Get-Module PowerShellGet,PackageManagement | Remove-Module -Force -Verbose
       powershell -Command { Install-Module -Name PowershellGet -MinimumVersion 1.6 -force -confirm:$false -verbose }
