--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,13 @@ language: cpp
 git:
   depth: 1000
 
-os:
-  - linux
-  - osx
-sudo: required
-dist: trusty
-osx_image: xcode8.3
+matrix:
+  include:
+    - os: linux
+      dist: trusty
+      sudo: required
+    - os: osx
+      osx_image: xcode9.4
 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
@@ -26,4 +27,4 @@ install:
 
 script:
   - ulimit -n 4096
-  - powershell -File scripts/travis.ps1
+  - pwsh -File scripts/travis.ps1
