Install libunwind8 for dotnet

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ before_install:
       mkdir -p /usr/local/lib;
       ln -s /usr/local/opt/openssl/lib/libcrypto.1.0.0.dylib /usr/local/lib/;
       ln -s /usr/local/opt/openssl/lib/libssl.1.0.0.dylib /usr/local/lib/;
+    elif [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+      apt-get install libunwind8;
     fi
 
 install:
