--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
       ln -s /usr/local/opt/openssl/lib/libcrypto.1.0.0.dylib /usr/local/lib/;
       ln -s /usr/local/opt/openssl/lib/libssl.1.0.0.dylib /usr/local/lib/;
     elif [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-      apt-get install libunwind8;
+      sudo apt-get install libunwind8;
     fi
 
 install:
