(GH-799) Revive docfx scripts
Previously the document generation scripts for docfx were broken e.g. Unable to
download docfx from github due to TLS.  This commit;
* Updates the BuildDocs script to properly clean and download docfx from Github
* Updates the docfx.json file to use the correct naming (cwd -> src) and to
  use the correct project files
* Updates gitignore to ignore docfx working directory
* Adds two build tasks (BuildDocs and ServeDocs) to build and serve
  autogenerated documentation
* Adds additional configuration switch for Invoke-Build for legacy applications,
  like docfx, which use MSBuild as a library but it needs the dotNet Core
  versions of MSBuild instead of VS 2015/2017

--- a/.gitignore
+++ b/.gitignore
@@ -29,9 +29,6 @@ registered_data.ini
 .dotnet/
 module/Plaster
 module/PSScriptAnalyzer
-docs/_site/
-docs/_repo/
-docs/metadata/
 *.zip
 
 # Generated build info file
@@ -74,3 +71,9 @@ module/PowerShellEditorServices/Third\ Party\ Notices.txt
 
 # JetBrains generated file (Rider, intelliJ)
 .idea/
+
+# Docfx generation
+docs/_site/
+docs/_repo/
+docs/metadata/
+tools/docfx
