--- a/tools/releaseBuild/Image/DockerFile
+++ b/tools/releaseBuild/Image/DockerFile
@@ -17,9 +17,8 @@ RUN Import-Module PackageManagement; `
     Install-Module InvokeBuild -MaximumVersion 5.1.0 -Scope CurrentUser -Force; `
     Install-Module platyPS -RequiredVersion 0.9.0 -Scope CurrentUser -Force;
 
-# Install .NET Framework 4.5.1 & 4.5.2 Developer Packs
+# Install .NET Framework 4.5.2 Developer Packs
 RUN Import-Module ./containerFiles/dockerInstall.psm1; `
-    Install-ChocolateyPackage -PackageName netfx-4.5.1-devpack; `
     Install-ChocolateyPackage -PackageName netfx-4.5.2-devpack;
 
 # Copy build script over
