Enhance Get-PsesRpcMessageResponseTime to select specific message types

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,12 @@
             "type": "coreclr",
             "request": "attach",
             "processId": "${command:pickProcess}"
+        },
+        {
+            "type": "PowerShell",
+            "request": "launch",
+            "name": "PowerShell Interactive Session",
+            "cwd": ""
         }
     ]
 }
