--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,13 +7,8 @@ trigger:
 - master
 
 pool:
-  vmImage: 'Ubuntu-16.04'
+  vmImage: ubuntu-16.04
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- script: ulimit -n 4096
+- pwsh: scripts/travis.ps1
