--- a/.vsts-ci/templates/ci-general.yml
+++ b/.vsts-ci/templates/ci-general.yml
@@ -1,5 +1,5 @@
 steps:
-  - pwsh: ../scripts/azurePipelinesBuild.ps1
+  - pwsh: scripts/azurePipelinesBuild.ps1
   - task: PublishTestResults@2
     inputs:
       testRunner: VSTest
