--- a/.vsts-ci/azure-pipelines-ci.yml
+++ b/.vsts-ci/azure-pipelines-ci.yml
@@ -16,8 +16,8 @@ jobs:
   - powershell: scripts/azurePipelinesBuild.ps1
   - task: PublishTestResults@2
     inputs:
-      testRunner: VSTest
-      testResultsFiles: '**/*.trx'
+      testRunner: xUnit
+      testResultsFiles: '**/*.Results.xml'
     condition: succeededOrFailed()
   - task: PublishBuildArtifacts@1
     inputs:
