--- a/.vsts-ci/azure-pipelines-ci.yml
+++ b/.vsts-ci/azure-pipelines-ci.yml
@@ -1,44 +1,40 @@
-trigger:
-- master
-- legacy/1.x
 variables:
-   # Don't download unneeded packages
-  - name: DOTNET_SKIP_FIRST_TIME_EXPERIENCE
-    value: 'true'
-    # Don't send telemetry
-  - name: DOTNET_CLI_TELEMETRY_OPTOUT
-    value: 'true'
-jobs:
-- job: Windows_powershell
-  pool:
-    vmImage: 'VS2017-Win2016'
-  steps:
-  - powershell: scripts/azurePipelinesBuild.ps1
-  - task: PublishTestResults@2
-    inputs:
-      testRunner: VSTest
-      testResultsFiles: '**/*.trx'
-    condition: succeededOrFailed()
-  - task: PublishBuildArtifacts@1
-    inputs:
-      ArtifactName: PowerShellEditorServices
-      PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+  - template: variables/environment.yml
+  - template: variables/pr-triggers.yml
+  - template: variables/build-images.yml
 
+trigger:
+  batch: true
+  branches:
+    include:
+      - $(prBuildBranches)
+  paths:
+    exclude:
+      - $(codePRExcludedBranches)
+
+jobs:
+- job: Windows10_powershell
+  pool:
+    vmImage: $(imgWin10)
+  steps:
+  - template: templates/ci-general.yml
+    parameters:
+      pwsh: false
 
 - job: Windows_pwsh
   pool:
-    vmImage: 'VS2017-Win2016'
+    vmImage: $(imgWin10)
   steps:
   - template: templates/ci-general.yml
 
 - job: macOS
   pool:
-    vmImage: 'macOS-10.13'
+    vmImage: $(imgMacOS)
   steps:
   - template: templates/ci-general.yml
 
 - job: Linux
   pool:
-    vmImage: 'Ubuntu-16.04'
+    vmImage: $(imgUbuntu)
   steps:
   - template: templates/ci-general.yml
