Fix markdown exclusion

--- a/.vsts-ci/variables/pr-triggers.yml
+++ b/.vsts-ci/variables/pr-triggers.yml
@@ -9,7 +9,7 @@ variables:
       .editorconfig
       .gitattributes
       .gitignore
-      '**/*.md'
+      /docs
   - name: prBuildBranches
     value:
       master
