Publish Pester results in CI

--- a/.vsts-ci/azure-pipelines-ci.yml
+++ b/.vsts-ci/azure-pipelines-ci.yml
@@ -19,6 +19,11 @@ jobs:
       testRunner: VSTest
       testResultsFiles: '**/*.trx'
     condition: succeededOrFailed()
+  - task: PublishTestResults@2
+    inputs:
+      testRunner: NUnit
+      testResultsFiles: '**/TestResults.xml'
+    condition: succeededOrFailed()
   - task: PublishBuildArtifacts@1
     inputs:
       ArtifactName: PowerShellEditorServices
