--- a/.vsts-ci/templates/ci-general.yml
+++ b/.vsts-ci/templates/ci-general.yml
@@ -18,7 +18,7 @@ steps:
     inputs:
       testRunner: NUnit
       testResultsFiles: '**/TestResults.xml'
-    condition: suceededOrFailed()
+    condition: succeededOrFailed()
   - task: PublishBuildArtifacts@1
     inputs:
       ArtifactName: PowerShellEditorServices
