--- a/NuGet.Config
+++ b/NuGet.Config
@@ -3,4 +3,7 @@
   <solution>
     <add key="disableSourceControlIntegration" value="true" />
   </solution>
+  <packageSources>
+    <add key="nuget.org" value="https://www.myget.org/F/omnisharp/api/v3/index.json" protocolVersion="3" />
+  </packageSources>
 </configuration>
