Move imports and include newtonsoft

--- a/tools/PsesPsClient/PsesPsClient.csproj
+++ b/tools/PsesPsClient/PsesPsClient.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\..\src\PowerShellEditorServices.Protocol\PowerShellEditorServices.Protocol.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+  </ItemGroup>
+
 </Project>
