don't checkin maml

--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,7 @@ PowerShellEditorServices.sln.ide/storage.ide
 
 # Don't include PlatyPS generated MAML
 module/PowerShellEditorServices/Commands/en-US/*-help.xml
+module/PowerShellEditorServices.VSCode/en-US/*-help.xml
 
 # Don't include Third Party Notices in module folder
 module/PowerShellEditorServices/Third\ Party\ Notices.txt
