minimum change needed

--- a/src/PowerShellEditorServices/PowerShellEditorServices.csproj
+++ b/src/PowerShellEditorServices/PowerShellEditorServices.csproj
@@ -31,5 +31,6 @@
     <PackageReference Include="System.Security.Principal.Windows" Version="4.6.0" />
     <PackageReference Include="UnixConsoleEcho" Version="0.1.0" />
     <PackageReference Include="OmniSharp.Extensions.DebugAdapter.Server" Version="0.14.0" />
+    <PackageReference Include="Microsoft.Windows.PowerShell.ScriptAnalyzer" Version="1.18.4" />
   </ItemGroup>
 </Project>
